# Tundra

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  readme.md
cmake/: utils.cmake
shaders/: compile.py
shaders/src/: bindings.hlsli  defines.hlsli  fullscreen_clear.frag.hlsl  fullscreen_clear.vert.hlsl  hash.hlsli  templates.hlsli
shaders/src/math/: quat.hlsli
shaders/src/utils/: thread_group_tiling.hlsli
shaders/src/visibility_buffer/culling/: clear_index_buffer_generator_dispatch_args.comp.hlsl  instance_culling_and_lod.comp.hlsl  meshlet_culling.comp.hlsl
shaders/src/visibility_buffer/inc/: commands.hlsli  frustum_culling.hlsli  instance_transform.hlsli  mesh_descriptor.hlsli  mesh_instance.hlsli  meshlet.hlsli  unpacked_index.hlsli  visible_mesh_instance.hlsli  visible_meshlet.hlsli
shaders/src/visibility_buffer/mesh_shaders/: instance_culling.comp.hlsl  instance_culling_init.comp.hlsl  mesh_shader.frag.hlsl  mesh_shader.mesh.hlsl  mesh_shader.task.hlsl  shared.hlsli  task_dispatch_command_generator.comp.hlsl
shaders/src/visibility_buffer/passes/: gpu_rasterize.comp.hlsl  gpu_rasterize_debug.comp.hlsl  gpu_rasterize_generate_dispatch_args.comp.hlsl  gpu_rasterize_init.comp.hlsl  material.comp.hlsl  visibility_buffer_pass.frag.hlsl  visibility_buffer_pass.vert.hlsl
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.natvis
src/core/include/core/: build.h  compiler_setup.h  core.h  logger.h  macros.h  profiler.h  project_dirs.h  typedefs.h
src/core/include/core/memory/: allocator.h  (+2 more)
src/core/src/: core_module.cpp  logger.cpp  profiler.cpp
src/core/src/memory/: allocator.cpp  linear_allocator.cpp
src/core/src/module/: module.cpp  module_manager.cpp
src/core/src/project_dirs/: project_dirs.cpp  windows.cpp  windows.h
src/core/src/std/: assert.cpp  panic.cpp  timer.cpp
src/core/src/utils/: libloader.cpp
src/globals/: CMakeLists.txt
src/globals/include/globals/: globals.h
src/globals/src/: globals.cpp  globals_module.cpp
src/math/: CMakeLists.txt
src/math/include/math/: constants.h  log2_indices.h  math_hash.h  math_utils.h  matrix4.h  quat.h  range.h  transform.h  vector2.h  vector3.h  vector4.h
src/math/src/: math_module.cpp  transform.cpp
src/platform/: CMakeLists.txt
src/platform/include/platform/: window_native_handle.h
src/platform/src/: platform_module.cpp
src/renderer/: CMakeLists.txt
src/renderer/src/: renderer_module.cpp
src/renderer/src/frame_graph/: builder.cpp  frame_graph.cpp  present_pass.cpp  registry.cpp  render_pass.cpp
src/renderer/src/frame_graph2/: builder.cpp  frame_graph.cpp
src/rhi/: CMakeLists.txt  rhi.natvis
src/rhi/include/rhi/: config.h  enums.h  queue.h  rhi_context.h  rhi_module.h  submit_info.h  validation_layers.h
src/rhi/src/: queue.cpp  rhi_context.cpp  rhi_module.cpp  submit_info.cpp
src/rhi/src/commands/: barrier.cpp  command_encoder.cpp  commands.cpp
src/rhi/src/resources/: buffer.cpp  compute_pipeline.cpp  graphics_pipeline.cpp  render_pass.cpp  resource_tracker.cpp  sampler.cpp  shader.cpp  swapchain.cpp  texture.cpp
src/rhi/src/validation_layers/: command_encoder_validator.cpp  command_encoder_validator.h  validation_layers.cpp
src/vulkan_rhi/: CMakeLists.txt
src/vulkan_rhi/src/: vulkan_allocator.cpp  vulkan_allocator.h  vulkan_config.h  vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_rhi_context.cpp  vulkan_rhi_context.h  vulkan_rhi_module.cpp  vulkan_utils.cpp  vulkan_utils.h
src/vulkan_rhi/src/commands/: vulkan_barrier.cpp  vulkan_barrier.h  vulkan_command_decoder.cpp  vulkan_command_decoder.h  vulkan_submit_work_scheduler.cpp  vulkan_submit_work_scheduler.h
src/vulkan_rhi/src/loader/: device.cpp  device.h  entry.cpp  entry.h  instance.cpp  instance.h
src/vulkan_rhi/src/managers/: managers.cpp  managers.h  vulkan_command_buffer_manager.cpp  vulkan_command_buffer_manager.h  vulkan_descriptor_bindless_manager.cpp  vulkan_descriptor_bindless_manager.h  vulkan_pipeline_cache_manager.cpp  vulkan_pipeline_cache_manager.h  vulkan_pipeline_layout_manager.cpp  vulkan_pipeline_layout_manager.h
src/vulkan_rhi/src/resources/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_sampler.cpp  vulkan_sampler.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_texture_view.cpp  vulkan_texture_view.h
thrid_party/: CMakeLists.txt
thrid_party/cgltf/: CMakeLists.txt
thrid_party/cgltf/src/: cgltf.c
thrid_party/cxxopts/include/: meson.build
thrid_party/cxxopts/src/: meson.build
thrid_party/cxxopts/test/: meson.build
thrid_party/fmt/: CMakeLists.txt
thrid_party/glfw/examples/: meson.build
thrid_party/glfw/src/: meson.build
thrid_party/glfw/tests/: meson.build
thrid_party/robin_hood_hashing/: CMakeLists.txt
thrid_party/vk_mem_alloc/: CMakeLists.txt
thrid_party/vk_mem_alloc/src/: vk_mem_alloc.cpp
thrid_party/vulkan_headers/: CMakeLists.txt
thrid_party/vulkan_headers/include/vulkan/: vk_platform.h
tundra/: CMakeLists.txt
tundra/src/: app.cpp  app.h  main.cpp  meshlet_mesh.cpp  meshlet_mesh.h  pipelines.cpp  pipelines.h  shader.h
tundra/src/renderer/: config.h  helpers.h  material_pass.cpp  material_pass.h  render_input_output.h  renderer.cpp  renderer.h  ubo.h
tundra/src/renderer/culling/: instance_culling_and_lod.cpp  instance_culling_and_lod.h  meshlet_culling.cpp  meshlet_culling.h
tundra/src/renderer/hardware/: hardware_rasterizer.cpp  hardware_rasterizer.h
tundra/src/renderer/mesh_shaders/: instance_culling.cpp  instance_culling.h  mesh_shader.cpp  mesh_shader.h  mesh_shader_renderer.cpp  mesh_shader_renderer.h  task_dispatch_command_generator.cpp  task_dispatch_command_generator.h
tundra/src/renderer/passes/: gpu_rasterizer.cpp  gpu_rasterizer_init.h
tundra/src/renderer/software/: software_rasterizer.cpp  software_rasterizer.h
(+132 files in other folders)
